# serde-xml

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
