[package]
name = "serde-xml-fast"
version = "1.0.0"
edition = "2021"
authors = ["Joseph R Quinn <423821+quinnjr@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
description = "A fast, 100% Serde-compatible XML serialization and deserialization library"
repository = "https://github.com/quinnjr/serde-xml"
homepage = "https://github.com/quinnjr/serde-xml"
documentation = "https://docs.rs/serde-xml-fast"
keywords = ["xml", "serde", "serialization", "deserialization", "parser"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"

[lib]
name = "serde_xml"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
memchr = "2.7"
itoa = "1.0"
ryu = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = { version = "0.8.0", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "xml_benchmark"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "attributes"
path = "examples/attributes.rs"

[[example]]
name = "nested"
path = "examples/nested.rs"

[[example]]
name = "collections"
path = "examples/collections.rs"

[[example]]
name = "html_parsing"
path = "examples/html_parsing.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
